services/node-service/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
  namespace: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: node-service
          command: ["node"]
          args: ["index.js"]
          image: ghcr.io/ndrwj/monorepo-cfx/services/node-service
          ports:
            - containerPort: 8080
