services/node-service/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node-service
  ports:
    - port: 80
      targetPort: 8080
